<resources>
    <string name="app_name">InNoTime</string>

    <string name="time">23:59:59</string>

<!--    Actions-->
    <string name="create">Create</string>
    <string name="add">Add</string>
    <string name="add_subtimer">Add subtimer</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="importTimer">Import</string>
    <string name="finish">Finish</string>


    <!--    Types-->
    <string name="simple">Simple</string>
    <string name="sequential">Sequential</string>

<!--    Timer info-->
    <string name="title">Enter label</string>
    <string name="name">Name</string>
    <string name="type">Select type of the timer</string>
    <string name="description">Description</string>
    <string name="done">Done!</string>

<!--    Errors-->
    <string name="url_error">Error in url!</string>
    <string name="alert">Fill all the fields</string>
    <string name="url">Enter url</string>
    <string name="no_timer">No timer was set!</string>
    <string name="share_error">Cannot share this timer</string>
    <string name="duration_error">Incorrect duration!</string>

<!--    Alerts-->
    <string name="pause_active">Your active timer has been paused</string>


</resources>